--- a/package.json
+++ b/package.json
@@ -15,11 +15,14 @@
   "author": "prohea",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.1",
-    "if-env": "^1.0.4"
+    "babel": "^6.23.0",
+    "express": "^4.18.2",
+    "idb": "^7.1.1",
+    "if-env": "^1.0.4",
+    "webpack": "^5.75.0"
   },
   "devDependencies": {
-    "concurrently": "^5.2.0",
-    "nodemon": "^2.0.4"
+    "concurrently": "^5.3.0",
+    "nodemon": "^2.0.20"
   }
 }
